fix&feat: remove a horizontal scroll and add blur for header

--- a/css/main.css
+++ b/css/main.css
@@ -403,6 +403,8 @@ a:visited {
   left: 0;
   width: 100%;
   z-index: 3;
+  background-color: rgba(255, 253, 253, 0);
+  backdrop-filter: blur(5px);
 }
 .header__content {
   display: flex;
@@ -837,6 +839,7 @@ a:visited {
   display: flex;
   gap: 64px;
   justify-content: center;
+  overflow: hidden;
 }
 @media (max-width: 768px) {
   .footer__content {
