--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -4,6 +4,7 @@
         display: flex;
         gap: 64px;
         justify-content: center;
+        overflow: hidden;
 
         @media (max-width: 768px) {
             flex-direction: column;
