--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -4,6 +4,8 @@
     left: 0;
     width: 100%;
     z-index: 3;
+    background-color: rgba(255, 253, 253, 0);
+    backdrop-filter: blur(5px);
 
     &__content {
         display: flex;
